--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^16.2.0",
     "@types/gapi": "^0.0.47",
     "@types/gapi.auth2": "^0.0.61",
+    "@types/jquery": "^3.5.32",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
